--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div id="bar" class="bar">
+            <div id="lines" class="bar">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
