--- a/index.html
+++ b/index.html
@@ -12,48 +12,53 @@
 <body>
     <div class="container">
         <div class="nav_bar">
-            <div class="icone">
-                <img
-                    src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg">
+            <div class="icons">
+
+                <div class="icone">
+                    <img
+                        src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg">
+                </div>
             </div>
             <div class="serch_12">
                 <div class="serch">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <input placeholder="Search for Products, Brands and more">
+                    <input placeholder="🔍 Search for Products, Brands and More">
                 </div>
             </div>
             <div class="shorts">
-                <div class="home">
-                    <p>Home</p>
-                </div>
-                <div class="home">
-                    <p>About</p>
-                </div>
                 <div class="box">
-                    <div class="cart">
-                        <p>Login</p>
-                    </div>
                     <div class="cart_i">
                         <i class="fa-regular fa-user"></i>
                     </div>
+                    <div class="cart">
+                        <p>Login</p>
+                    </div>
                 </div>
                 <div class="box">
-                    <div class="cart">
-                        <p>Cart</p>
-                    </div>
                     <div class="cart_i">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </div>
+                    <div class="cart">
+                        <p>Cart</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="Become" class="cart_i">
+                        <i class="fa-solid fa-store"></i>
+                    </div>
+                    <div id="Seller" class="cart">
+                        <p>Become a Seller</p>
+                    </div>
                 </div>
             </div>
-            <div id="lines" class="bar">
+            <div id="dots" class="cart_i">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+            </div>
+            <div id="hello" class="bar">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </div>
-
-
-
     <div id="bar" class="main1">
         <div class="main">
             <div class="flex_bar">
@@ -74,6 +79,134 @@
                 <p>Blog</p>
             </div>
         </div>
+    </div>
+    <!-- tere are part imgs of Products -->
+    <div class="color">
+        <div class="Products">
+            <div id="section1" class="section">
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Grocery</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100">
+                    <p>Mobiles</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Fashion</p>
+                </div>
+            </div>
+            <div id="section2" class="section">
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Electronics</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Home & Furniture</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/64/64/image/0139228b2f7eb413.jpg?q=100">
+                    <p>Appliances</p>
+                </div>
+            </div>
+            <div id="section3" class="section">
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/71050627a56b4693.png?q=100">
+                    <p>Flight Bookings</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Beauty, Toyes & More</p>
+                </div>
+                <div class="dress">
+                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <p>Two Wheelers</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- there are slider part -->
+    <header>
+        <div id="slider_complete" class="container_2">
+            <div id="slider" class="slider">
+                <div class="slide">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/8505baa25cf466f3.jpeg?q=20">
+                </div>
+                <div class="slide">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/c857932113f9e5ad.jpg?q=20">
+                </div>
+                <div class="slide">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/0fa0a46f1682e479.jpg?q=20">
+                </div>
+                <div class="slide">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/24985ee329643e05.jpg?q=20">
+                </div>
+                <div class="slide">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/03988fdb408473ce.jpeg?q=20">
+                </div>
+                <div class="slide">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShdnb6wVGjh3EpUPruu_VoNpCwc9Ac-pcw6Q&s">
+                </div>
+            </div>
+    </header>
+
+    <!-- there are part of produts -->
+    <div class="headind">
+        <h1>Top offers</h1>
+    </div>
+    <div class="produts_lists">
+
+        <div class="img1">
+
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
+            <p>PUMA,Color..</p>
+            <p>50-80% off</p>
+
+
+        </div>
+        <div class="img1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR52qf6waRmRL1SEddF25IzZQMJPTu5Bcl1AA&s">
+            <p>50% off</p>
+        </div>
+        <div class="img1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
+            <p>50% off</p>
+        </div>
+        <div class="img1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIoBK-zdpfDjBnGmuE0U7_Q_LoWvZDqb8KqA&s">
+            <p>50% off</p>
+        </div>
+        <div class="img1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb4Sw7jfiM2BhKdAoDbUuWhBlYCdh1zg4MLA&s">
+            <p>50% off</p>
+        </div>
+    </div>
+    <!-- there are cart part -->
+    <div class="cart_lists">
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/b3ee941d6274f1ff.png?q=20">
+        </div>
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/d042ed7a0d8176fe.jpg?q=20">
+        </div>
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/08ed687587b6272c.jpg?q=20">
+        </div>
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/5d4623ecc38d30c5.png?q=20">
+        </div>
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/148e9883140d6e35.png?q=20">
+        </div>
+        <div class="cart1">
+            <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/7a15ff56886d1051.jpg?q=20">
+        </div>
+    </div>
 </body>
 <script src="/script.js"></script>
 
