--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
     <header>
         <div id="slider_complete" class="container_2">
             <div id="slider" class="slider">
-                <div class="slide">
+                <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/8505baa25cf466f3.jpeg?q=20">
                 </div>
-                <div class="slide">
+                <div  id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/c857932113f9e5ad.jpg?q=20">
                 </div>
-                <div class="slide">
+                <div  id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/0fa0a46f1682e479.jpg?q=20">
                 </div>
-                <div class="slide">
+                <div  id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/24985ee329643e05.jpg?q=20">
                 </div>
-                <div class="slide">
+                <div  id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/03988fdb408473ce.jpeg?q=20">
                 </div>
-                <div class="slide">
+                <div id="slid"  class="slide">
                     <img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShdnb6wVGjh3EpUPruu_VoNpCwc9Ac-pcw6Q&s">
                 </div>
@@ -156,54 +156,50 @@
     </header>
 
     <!-- there are part of produts -->
-    <div class="headind">
-        <h1>Top offers</h1>
-    </div>
-    <div class="produts_lists">
-
-        <div class="img1">
-
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
-            <p>PUMA,Color..</p>
-            <p>50-80% off</p>
-
-
+        <div class="headind">
+            <h1>Top offers</h1>
         </div>
-        <div class="img1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR52qf6waRmRL1SEddF25IzZQMJPTu5Bcl1AA&s">
-            <p>50% off</p>
+        <div id="produts_lists" class="produts_lists">
+            <div class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
+                <p>PUMA,Color..</p>
+                <p>50-80% off</p>
+            </div>
+            <div class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR52qf6waRmRL1SEddF25IzZQMJPTu5Bcl1AA&s">
+                <p>50% off</p>
+            </div>
+            <div class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
+                <p>50% off</p>
+            </div>
+            <div class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIoBK-zdpfDjBnGmuE0U7_Q_LoWvZDqb8KqA&s">
+                <p>50% off</p>
+            </div>
+            <div class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb4Sw7jfiM2BhKdAoDbUuWhBlYCdh1zg4MLA&s">
+                <p>50% off</p>
+            </div>
         </div>
-        <div class="img1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
-            <p>50% off</p>
-        </div>
-        <div class="img1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIoBK-zdpfDjBnGmuE0U7_Q_LoWvZDqb8KqA&s">
-            <p>50% off</p>
-        </div>
-        <div class="img1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb4Sw7jfiM2BhKdAoDbUuWhBlYCdh1zg4MLA&s">
-            <p>50% off</p>
-        </div>
-    </div>
     <!-- there are cart part -->
     <div class="cart_lists">
-        <div class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/b3ee941d6274f1ff.png?q=20">
         </div>
-        <div class="cart1">
+        <div  id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/d042ed7a0d8176fe.jpg?q=20">
         </div>
-        <div class="cart1">
+        <div  id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/08ed687587b6272c.jpg?q=20">
         </div>
-        <div class="cart1">
+        <div  id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/5d4623ecc38d30c5.png?q=20">
         </div>
-        <div class="cart1">
+        <div  id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/148e9883140d6e35.png?q=20">
         </div>
-        <div class="cart1">
+        <div  id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/7a15ff56886d1051.jpg?q=20">
         </div>
     </div>
