--- a/index.html
+++ b/index.html
@@ -160,24 +160,24 @@
             <h1>Top offers</h1>
         </div>
         <div id="produts_lists" class="produts_lists">
-            <div class="img1">
+            <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
                 <p>PUMA,Color..</p>
                 <p>50-80% off</p>
             </div>
-            <div class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR52qf6waRmRL1SEddF25IzZQMJPTu5Bcl1AA&s">
+            <div id="jackets"  class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
                 <p>50% off</p>
             </div>
-            <div class="img1">
+            <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
                 <p>50% off</p>
             </div>
-            <div class="img1">
+            <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIoBK-zdpfDjBnGmuE0U7_Q_LoWvZDqb8KqA&s">
                 <p>50% off</p>
             </div>
-            <div class="img1">
+            <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb4Sw7jfiM2BhKdAoDbUuWhBlYCdh1zg4MLA&s">
                 <p>50% off</p>
             </div>
