--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
                 <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/8505baa25cf466f3.jpeg?q=20">
                 </div>
-                <div  id="slid" class="slide">
+                <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/c857932113f9e5ad.jpg?q=20">
                 </div>
-                <div  id="slid" class="slide">
+                <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/0fa0a46f1682e479.jpg?q=20">
                 </div>
-                <div  id="slid" class="slide">
+                <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/24985ee329643e05.jpg?q=20">
                 </div>
-                <div  id="slid" class="slide">
+                <div id="slid" class="slide">
                     <img src="https://rukminim2.flixcart.com/fk-p-flap/1620/270/image/03988fdb408473ce.jpeg?q=20">
                 </div>
-                <div id="slid"  class="slide">
+                <div id="slid" class="slide">
                     <img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShdnb6wVGjh3EpUPruu_VoNpCwc9Ac-pcw6Q&s">
                 </div>
@@ -156,6 +156,7 @@
     </header>
 
     <!-- there are part of produts -->
+    <div class="part_prodicts">
         <div class="headind">
             <h1>Top offers</h1>
         </div>
@@ -165,44 +166,116 @@
                 <p>PUMA,Color..</p>
                 <p>50-80% off</p>
             </div>
-            <div id="jackets"  class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIoBK-zdpfDjBnGmuE0U7_Q_LoWvZDqb8KqA&s">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb4Sw7jfiM2BhKdAoDbUuWhBlYCdh1zg4MLA&s">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZimJD1bCNfVa4Ya7MVm7Kgdk_tNA39YeLXA&s">
                 <p>50% off</p>
             </div>
         </div>
+    </div>
     <!-- there are cart part -->
     <div class="cart_lists">
         <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/b3ee941d6274f1ff.png?q=20">
         </div>
-        <div  id="cart1" class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/d042ed7a0d8176fe.jpg?q=20">
         </div>
-        <div  id="cart1" class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/08ed687587b6272c.jpg?q=20">
         </div>
-        <div  id="cart1" class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/5d4623ecc38d30c5.png?q=20">
         </div>
-        <div  id="cart1" class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/148e9883140d6e35.png?q=20">
         </div>
-        <div  id="cart1" class="cart1">
+        <div id="cart1" class="cart1">
             <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/7a15ff56886d1051.jpg?q=20">
         </div>
     </div>
+    <!-- there are parts of card dow  -->
+    <div class="main_three_box">
+        <div class="three_box">
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div  id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1"  class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1"  class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+        </div>
+        <div id="box_two" class="three_box">
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+        </div>
+        <div id="box_3" class="three_box">
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 <script src="/script.js"></script>
 
