--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <div class="main">
             <div class="flex_bar">
                 <div class="bar_search">
-                    <input placeholder="Search your keywords...">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input placeholder="🔍Search your keywords...">
                 </div>
                 <div id="cross" class="close">
                     <i class="fa-solid fa-xmark"></i>
@@ -274,8 +273,31 @@
             </div>
         </div>
     </div>
-
-
+<!-- there are part off img slider type -->
+<div class="slider_type">
+    <img src="https://rukminim1.flixcart.com/fk-p-flap/1600/350/image/d3d9fe6aa331e1fa.jpg?q=20">
+</div>
+<!-- there are carts off 2nd -->
+<div class="cart_lists">
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/b3ee941d6274f1ff.png?q=20">
+    </div>
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/d042ed7a0d8176fe.jpg?q=20">
+    </div>
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/08ed687587b6272c.jpg?q=20">
+    </div>
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/5d4623ecc38d30c5.png?q=20">
+    </div>
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/148e9883140d6e35.png?q=20">
+    </div>
+    <div id="cart1" class="cart1">
+        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/7a15ff56886d1051.jpg?q=20">
+    </div>
+</div>
 </body>
 <script src="/script.js"></script>
 
