--- a/index.html
+++ b/index.html
@@ -167,18 +167,22 @@
             </div>
             <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
+                <p>i-Phone:12,Color..</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
+                <p>Jeeans..</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
+                <p>Apple Buds.</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZimJD1bCNfVa4Ya7MVm7Kgdk_tNA39YeLXA&s">
+                <p>Heater...</p>
                 <p>50% off</p>
             </div>
         </div>
@@ -208,68 +212,68 @@
     <div class="main_three_box">
         <div class="three_box">
             <div id="number_1" class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwr_C3Oa3NBSgEdbO0aFSoVJQzCmReDpQz4g&s">
+                <p>Men Jacket..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div  id="number_1" class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQohTgP2I0AoP24ZK4StkalaWvU0xNs5VUFkw&s">
+                <p>Men Sweaters..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div id="number_1"  class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTLqWMzjBee7cnAUSuj_llf-oBmPTv3ihndQ&s">
+                <p>Men Sweatsheet..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div id="number_1"  class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq3BqYRNU0VHmhzqPWqZS3NZ4wYnKtoLolgA&s">
+                <p>Men Muffrels..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
         </div>
         <div id="box_two" class="three_box">
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL1BBoU608fKyZQYUwiiubYajLOTGq1Lg_Ug&s">
+                <p>Bed Mattress</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgmkyg9AsxQLGeI7fMuq7zfUafmW6hPPQ2og&s">
+                <p>Beds</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkhBJwh967CvZl_uwUUpqc2qLmKWTAIsexWw&s">
+                <p>Office Stydy Chairs</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwoacuLYFS5AZl_HWwzTeZhhZHNNENxapy8Q&s">
+                <p>Sofa & Sectionals</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
         </div>
         <div id="box_3" class="three_box">
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-pPJjBj-XvleX6pFonYeRTuh-NywuYWAWIQ&s">
+                <p>Air Conditioners</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
-                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX0xqt65WDRgXVRA13MmH9pnEm-HD29DKrQA&s">
+                <p>Television</p>
+                <p style="color: rgb(2, 212, 2);"><b>30-50% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
-                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh8zlMUB3H3bnweAV5PLrFgF37c03nj0lnlg&s">
+                <p>Tablets</p>
+                <p style="color: rgb(2, 212, 2);"><b>40% OFF</b></p>
             </div>
             <div class="number_1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46yDqH9hHKjZahLxnA8zREqU1GTlVridP0Q&s">
-                <p>Toster Macker</p>
-                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVUb6xXI4r3_NSOWgLZ0M7A6slnu9N4HFtfw&s">
+                <p>Washing Machines</p>
+                <p style="color: rgb(2, 212, 2);"><b>50% OFF</b></p>
             </div>
         </div>
     </div>
@@ -280,22 +284,22 @@
 <!-- there are carts off 2nd -->
 <div class="cart_lists">
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/b3ee941d6274f1ff.png?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6a50a23ea6319ed4.jpg?q=20">
     </div>
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/d042ed7a0d8176fe.jpg?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/547d756f97507e15.jpg?q=20">
     </div>
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/08ed687587b6272c.jpg?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/c337d4aef8aa4c16.jpg?q=20">
     </div>
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/5d4623ecc38d30c5.png?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/ac7e50a78daeac67.png?q=20">
     </div>
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/148e9883140d6e35.png?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6c613e3c99904603.jpg?q=20">
     </div>
     <div id="cart1" class="cart1">
-        <img src="https://rukminim2.flixcart.com/fk-p-flap/520/280/image/7a15ff56886d1051.jpg?q=20">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/b31a9d73c74a2423.jpg?q=20">
     </div>
 </div>
 </body>
