--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 </div>
             </div>
             <div class="parts">
-                <p>Home</p>
-                <p>About</p>
-                <p>Login</p>
-                <p>Cart</p>
-                <p>Shop</p>
-                <p>Blog</p>
+                <p><b>Home</b></p>
+                <p><b>About</b></p>
+                <p><b>Login</b></p>
+                <p><b>Cart</b></p>
+                <p><b>Shop</b></p>
+                <p><b>Blog</b></p>
             </div>
         </div>
     </div>
@@ -301,6 +301,62 @@
     <div id="cart1" class="cart1">
         <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/b31a9d73c74a2423.jpg?q=20">
     </div>
+</div>
+   <!-- there are part off three boxes flex -->
+<div class="main_three_box">
+    <div class="three_box">
+        <div id="number_1" class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhacOgqJjQwtNEfS6UWR_pNgk7PqU1k213cQ&s">
+            <p>Hair Straighteners</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div  id="number_1" class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_OGLaWs6eD-y48GkHIMdN4d0QgrbVNrqSyg&s">
+            <p>Hair Dryers</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div id="number_1"  class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdtIL0hqtLSgasVw2yo2AKFKDm8lm28m8I_Q&s">
+            <p>Grooming Kit</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div id="number_1"  class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz_tpGW0ETxIOkqRFF6ztJdKiqUSdiuTWx-A&s">
+            <p>Hair curless.</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+    </div>
+    <div id="box_two" class="three_box">
+        <div class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRELqu5tWLqtIWe-opMttk3VHw3sT5Y4KLV6g&s">
+            <p>Cricket Balls</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTarAFnD07kG_VqE3YR1YL7DBaFUjtWnKPPhQ&s">
+            <p>Caroom</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk1B_kca1plhSjkacSCrwU_aiROsTih1nVsA&s">
+            <p>Basket Ball</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+        <div class="number_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtf7rntczZevsBy_Ox7d8tHh0aAYokXgs9YQ&s">
+            <p>Tbel Tanis</p>
+            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        </div>
+    </div>
+    <div id="box_3" class="three_box">
+        <div class="One_img_bg">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAfc-2MIN6Btu1n5bsogVDfwOom_KTKFtfEQ&s">
+        </div>
+    </div>
+</div>
+<!-- there are part off img slider 2 type -->
+<div id="next_slide" class="next_slide">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGUtg04-uC-wUBPwPeJKQ7JcLgzTXD5XicVQ&s">
 </div>
 </body>
 <script src="/script.js"></script>
